fixed the alignment of the divs and added slice().reverse() to show newest first

--- a/bookclub/src/app/quote/quote.component.css
+++ b/bookclub/src/app/quote/quote.component.css
@@ -2,8 +2,8 @@
     margin-bottom: 40px;
 }
 .row{
-    margin-right: 20px;
-    margin-left: 20px;
+    margin-right: 60px;
+    margin-left: 60px;
 }
 
 .btn{
